--- a/configs/COCO-Detection/faster_rcnn_R_101_C4_3x.yaml
+++ b/configs/COCO-Detection/faster_rcnn_R_101_C4_3x.yaml
@@ -1,4 +1,4 @@
-_BASE_: "../Base-RCNN-C4.yaml"
+_BASE_: "../Base-RCNN-C4-sample.yaml"
 MODEL:
   WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-101.pkl"
   MASK_ON: False
